--- a/index.css
+++ b/index.css
@@ -231,6 +231,10 @@ header nav ul li a:hover {
     font-size: 1.6rem;
 }
 
+.link2{
+    color: white;
+}
+
 /* Footer */
 footer {
     background-color: #0d0d0d;
